Adding theme and changing menus

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>Best Hikes</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +20,8 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Verti</a></h1>
-								<span>by HTML5 UP</span>
+								<h1><a href="index.html">Hikes</a></h1>
+								<span>Connecting you with nature</span>
 							</div>
 
 						<!-- Nav -->
@@ -31,18 +31,15 @@
 									<li>
 										<a href="#">Dropdown</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
 											<li>
-												<a href="#">Phasellus consequat</a>
+												<a href="#">Trails by level</a>
 												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
+													<li><a href="#">Easy</a></li>
+													<li><a href="#">Moderate</a></li>
+													<li><a href="#">Hard</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">Gallery</a></li>
 										</ul>
 									</li>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
@@ -59,13 +56,13 @@
 					<div id="banner" class="box container">
 						<div class="row">
 							<div class="col-7 col-12-medium">
-								<h2>Hi. This is Verti.</h2>
-								<p>It's a free responsive site template by HTML5 UP</p>
+								<h2>Hi! Welcome to Hikes</h2>
+								<p>Here you can find that hiking trail that you have been looking for</p>
 							</div>
 							<div class="col-5 col-12-medium">
 								<ul>
-									<li><a href="#" class="button large icon solid fa-arrow-circle-right">Ok let's go</a></li>
-									<li><a href="#" class="button alt large icon solid fa-question-circle">More info</a></li>
+									<li><a href="#" class="button large icon solid fa-arrow-circle-right">Find your hike</a></li>
+									<li><a href="#" class="button alt large icon solid fa-question-circle">About us</a></li>
 								</ul>
 							</div>
 						</div>
@@ -83,10 +80,10 @@
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>Put something here</h2>
-												<p>Maybe here as well I think</p>
+												<h2>Twin Falls</h2>
+												<p>Easy/Moderate</p>
 											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+											<p>Enjoy a nice walk alongside the river with some steps and beautiful mossy trees. Great four-season trail with very little obstacles and nice waterfalls.</p>
 										</div>
 									</section>
 
@@ -98,10 +95,10 @@
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>An interesting title</h2>
-												<p>This is also an interesting subtitle</p>
+												<h2>Annette Lake</h2>
+												<p>Moderate</p>
 											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+											<p>Fair length trail with a good elevation gain. This trail is perfect for spring and summer. It has plenty of tree-covered areas, as well as many spots for overnight camping.</p>
 										</div>
 									</section>
 
@@ -113,10 +110,10 @@
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>Oh, and finally ...</h2>
-												<p>Here's another intriguing subtitle</p>
+												<h2>Snow Lake</h2>
+												<p>Moderate/Hard</p>
 											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+											<p>One of the best hiking trails with a stunning lake at the end. It gets pretty busy in the summer but the whole path is worth it the effort.</p>
 										</div>
 									</section>
 
