--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 											<li><a href="#">Gallery</a></li>
 										</ul>
 									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Lakes</a></li>
+									<li><a href="right-sidebar.html">Waterfalls</a></li>
+									<li><a href="no-sidebar.html">Wild Flowers</a></li>
 								</ul>
 							</nav>
 
@@ -77,7 +77,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/IMG_5258.jpeg" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Twin Falls</h2>
@@ -92,7 +92,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/IMG_4625.jpeg" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Annette Lake</h2>
@@ -107,7 +107,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/IMG_8172.jpeg" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Snow Lake</h2>
@@ -131,13 +131,13 @@
 								<!-- Sidebar -->
 									<div id="sidebar">
 										<section class="widget thumbnails">
-											<h3>Interesting stuff</h3>
+											<h3>Gallery</h3>
 											<div class="grid">
 												<div class="row gtr-50">
-													<div class="col-6"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-													<div class="col-6"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-													<div class="col-6"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
-													<div class="col-6"><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
+													<div class="col-6"><a href="#" class="image fit"><img src="images/IMG_9962.jpeg" alt="" /></a></div>
+													<div class="col-6"><a href="#" class="image fit"><img src="images/IMG_1905.jpeg" alt="" /></a></div>
+													<div class="col-6"><a href="#" class="image fit"><img src="images/IMG_8141.jpeg" alt="" /></a></div>
+													<div class="col-6"><a href="#" class="image fit"><img src="images/IMG_1118.jpeg" alt="" /></a></div>
 												</div>
 											</div>
 											<a href="#" class="button icon fa-file-alt">More</a>
@@ -150,11 +150,9 @@
 								<!-- Content -->
 									<div id="content">
 										<section class="last">
-											<h2>So what's this all about?</h2>
-											<p>This is <strong>Verti</strong>, a free and fully responsive HTML5 site template by <a href="http://html5up.net">HTML5 UP</a>.
-											Verti is released under the <a href="http://html5up.net/license">Creative Commons Attribution license</a>, so feel free to use it for any personal or commercial project you might have going on (just don't forget to credit us for the design!)</p>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus mattis lectus sit amet phasellus quam turpis.</p>
-											<a href="#" class="button icon solid fa-arrow-circle-right">Continue Reading</a>
+											<h2>Did you know that Washington has breathtaking hikes?</h2>
+											<p>This is <strong>Hikes</strong>, a free platform where you have access to information about many hiking trail. Now you can get ready for your next adventure!</p>
+											<a href="#" class="button icon solid fa-arrow-circle-right">Pick your favorite</a>
 										</section>
 									</div>
 
