Adding info and editing pages

--- a/index.html
+++ b/index.html
@@ -21,30 +21,30 @@
 						<!-- Logo -->
 							<div id="logo">
 								<h1><a href="index.html">Hikes</a></h1>
-								<span>Connecting you with nature</span>
+								<span>connecting you with nature</span>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">Welcome</a></li>
+									<li class="current"><a href="index.html">Home</a></li>
 									<li>
 										<a href="#">Dropdown</a>
 										<ul>
 											<li>
 												<a href="#">Trails by level</a>
 												<ul>
-													<li><a href="#">Easy</a></li>
-													<li><a href="#">Moderate</a></li>
-													<li><a href="#">Hard</a></li>
+													<li><a href="left-sidebar.html">Easy</a></li>
+													<li><a href="right-sidebar.html">Moderate</a></li>
+													<li><a href="no-sidebar.html">Hard</a></li>
 												</ul>
 											</li>
 											<li><a href="#">Gallery</a></li>
 										</ul>
 									</li>
-									<li><a href="left-sidebar.html">Lakes</a></li>
-									<li><a href="right-sidebar.html">Waterfalls</a></li>
-									<li><a href="no-sidebar.html">Wild Flowers</a></li>
+									<li><a href="left-sidebar.html">Easy</a></li>
+									<li><a href="right-sidebar.html">Moderate</a></li>
+									<li><a href="no-sidebar.html">Hard</a></li>
 								</ul>
 							</nav>
 
@@ -77,7 +77,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/IMG_5258.jpeg" alt="" /></a>
+										<a href="left-sidebar.html" class="image featured"><img src="images/IMG_5258.jpeg" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Twin Falls</h2>
@@ -92,7 +92,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/IMG_4625.jpeg" alt="" /></a>
+										<a href="right-sidebar.html" class="image featured"><img src="images/IMG_4625.jpeg" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Annette Lake</h2>
@@ -107,7 +107,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/IMG_8172.jpeg" alt="" /></a>
+										<a href="no-sidebar.html" class="image featured"><img src="images/IMG_8172.jpeg" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Snow Lake</h2>
