--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>Hard</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,34 +20,29 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Verti</a></h1>
-								<span>by HTML5 UP</span>
+								<h1><a href="index.html">Hikes</a></h1>
+								<span>connecting you with nature</span>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="index.html">Welcome</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li>
 										<a href="#">Dropdown</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
 											<li>
-												<a href="#">Phasellus consequat</a>
+												<a href="#">Trails by level</a>
 												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
+													<li><a href="left-sidebar.html">Easy</a></li>
+													<li><a href="right-sidebar.html">Moderate</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Easy</a></li>
+									<li><a href="right-sidebar.html">Moderate</a></li>
+									<li class="current"><a href="no-sidebar.html">Hard</a></li>
 								</ul>
 							</nav>
 
@@ -62,14 +57,34 @@
 							<!-- Content -->
 								<article>
 
-									<h2>No Sidebar</h2>
+									<h2>SNOW LAKE</h2>
 
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
+									<h3>Trail Overview</h3>
 
-									<h3>More intriguing information</h3>
+									<p>Distance: Approximately 6.6-7.2 miles round trip (~10.6-11.6 km) out-and-back to the lakeshore.
+									<br><br>Elevation Gain: About 1,600-1,800 feet (~490-550 m).
+									<br><br>Difficulty: Moderate to moderately strenuous — sustained uphill with some steeper sections as you approach the lake basin.
+									<br><br>Average Time to Complete: ~3.5 - 5 hours depending on pace, breaks, and time spent at the lake.</p>
+
+									<h3>Nature & Scenery</h3>
+									
+									<p>The hike starts at the Alpental Ski Area parking lot and ascends through shaded forest with views of the South Fork Snoqualmie valley.
+									Above the tree line the trail opens to alpine terrain, with rocky areas, wildflowers in summer, and striking views of Chair Peak and Kaleetan Peak.
+									Snow Lake itself sits in a wide mountain basin — a stunning alpine lake fed by snowmelt and surrounded by rugged peaks.
+									The trail offers scenic viewpoints before descending slightly into the lake basin.</p>
+
+									<h3>Best Season to Hike</h3>
+
+									<p>Summer to Early Fall (July-October) is the most common and safest season for this hike: trails are usually snow-free, water flow is lower, and weather is more stable.
+									Early season (Late Spring to mid-July) can still have snow on the trail, especially near the saddle and lake basin, and requires care.
+									Winter snowshoeing is possible but avalanche risk is significant without experience and proper gear — generally not recommended for beginners in snowy conditions.</p>
+
+									<h3>Tips</h3>
+
+									<p>A Northwest Forest Pass is required for parking at the trailhead.
+									The trail is very popular and parking fills early on summer weekends — arrive early or go on a weekday if possible.
+									Good hiking boots and plenty of water are recommended — the trail is rocky in places with roots and occasional steep pitches near the lake.</p>
+
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
 									justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
 									ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
