--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>Moderate</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,34 +20,29 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Verti</a></h1>
-								<span>by HTML5 UP</span>
+								<h1><a href="index.html">Hikes</a></h1>
+								<span>connecting you with nature</span>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="index.html">Welcome</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li>
 										<a href="#">Dropdown</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
 											<li>
-												<a href="#">Phasellus consequat</a>
+												<a href="#">Trails by level</a>
 												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
+													<li><a href="left-sidebar.html">Easy</a></li>
+													<li><a href="no-sidebar.html">Hard</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li class="current"><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Easy</a></li>
+									<li class="current"><a href="right-sidebar.html">Moderate</a></li>
+									<li><a href="no-sidebar.html">Hard</a></li>
 								</ul>
 							</nav>
 
@@ -64,22 +59,22 @@
 									<!-- Content -->
 										<article>
 
-											<h2>Right Sidebar</h2>
+											<h2>ANNETTE LAKE</h2>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+											<h3>Nature & Scenery</h3>
+											<p>The trail starts through dense forests of Douglas fir, cedar, and hemlock and follows Humpback Creek early on, including a scenic waterfall near the start.
+											After climbing out of the woods, you'll pass open slopes and talus fields with mountain views and wildflowers in spring/summer.
+											The destination is Annette Lake, an alpine lake framed by peaks like Abiel and Silver Peak — ideal for a rest, photos, or (brave) swim in clear, cold water.
+											There are campsites near the lake if you want an overnight trip.</p>
+											
+											<h3>Best Season to Hike</h3>
+											<p>Late Spring through Early Fall (June-October) is the best and most popular window — snow mostly melts, wildflowers bloom, and the lake is accessible with fewer hazards.
+											Winter hiking/snowshoeing is possible with proper gear, but avalanche chutes and snowy sections can make the route more challenging and require winter experience and permits (Sno-Park pass).</p>
 
-											<h3>More intriguing information</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+											<h3>Tips</h3>
+											<p>You'll need a Northwest Forest Pass for parking during summer months and a Sno-Park permit for winter parking.
+											Trail can be muddy early in the season and rough road conditions to the trailhead mean driving slowly.
+											Start early on weekends to avoid crowds — this is a popular hike near Seattle.</p>
 
 											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
 											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
@@ -97,11 +92,11 @@
 
 									<!-- Sidebar -->
 										<section>
-											<h3>Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam.</p>
+											<h3>Trail Overview</h3>
+											<p>Distance: ~7 - 7.5 miles round-trip (≈11-12 km).
+											<br><br>Elevation Gain: ~1,800-2,000 ft (≈550-610 m).
+											<br><br>Difficulty: Moderate — steady elevation gain with some switchbacks; not overly steep but sustained.
+											<br><br>Average Time to Complete: ~4 - 5 hours total as a day hike.</p>
 											<footer>
 												<a href="#" class="button icon solid fa-info-circle">Find out more</a>
 											</footer>
