--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>Easy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,34 +20,29 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Verti</a></h1>
-								<span>by HTML5 UP</span>
+								<h1><a href="index.html">Hikes</a></h1>
+								<span>connecting you with nature</span>
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a href="index.html">Welcome</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li>
 										<a href="#">Dropdown</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
 											<li>
-												<a href="#">Phasellus consequat</a>
+												<a href="#">Trails by level</a>
 												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
+													<li><a href="right-sidebar.html">Moderate</a></li>
+													<li><a href="no-sidebar.html">Hard</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li class="current"><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li class="current"><a href="left-sidebar.html">Easy</a></li>
+									<li><a href="right-sidebar.html">Moderate</a></li>
+									<li><a href="no-sidebar.html">Hard</a></li>
 								</ul>
 							</nav>
 
@@ -63,18 +58,18 @@
 
 									<!-- Sidebar -->
 										<section>
-											<h3>Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam.</p>
+											<h3>Summary</h3>
+											<p>Distance: ~2.4-2.6 miles round-trip (about 4-4.2 km) on the main out-and-back route.</p>
+											<p>Elevation Gain: ~500-600 ft (150-180 m), gentle to moderate climb.</p>
+											<p>Difficulty: Easy to moderate — good for most hikers, including families if you're comfortable with some uphill and stairs.</p>
+											<p>Average Time to Complete: ~1 - 1.5 hours.</p>
 											<footer>
 												<a href="#" class="button icon solid fa-info-circle">Find out more</a>
 											</footer>
 										</section>
 
 										<section>
-											<h3>Subheading</h3>
+											<h3>You might like:</h3>
 											<ul class="style2">
 												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
 												<li><a href="#">Ornare in hendrerit in lectus</a></li>
@@ -93,22 +88,21 @@
 									<!-- Content -->
 										<article>
 
-											<h2>Left Sidebar</h2>
+											<h2>TWIN FALLS</h2>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+											<h3>Nature & Scenery</h3>
+											<p>The trail runs alongside the South Fork Snoqualmie River through lush Pacific Northwest forest with old-growth trees, ferns, and mossy sections.
+											You'll pass multiple viewpoints of waterfalls, including the picturesque upper and lower Twin Falls.
+											There are river access spots and small swimming/rock areas in warmer months.
+											Wildflowers and river plants are especially vibrant in spring and early summer.
+											Best Season to Hike
+											Spring – Fall (March to October) is the most popular and comfortable window — weather is mild, trail conditions are good, and water flow at the falls is strong.
+											Winter is also possible since the trail stays mostly below 1,000 ft, but it can be wet and muddy; early season snow isn’t usually a problem here compared to higher elevation hikes.</p>
 
-											<h3>More intriguing information</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+											<h3>Tips</h3>
+											<p>You'll need a Washington Discover Pass for parking.
+											The trail is well-used and can get busy on weekends, so arriving early helps.
+											Good footwear recommended: sections can be muddy after rain.</p>
 
 											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
 											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
